<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/update_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#80808080"
    android:orientation="horizontal" >

    <TableRow android:layout_width="match_parent"
        android:gravity="center" >
        <TextView
            android:id="@+id/d_update_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update1"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/input_update1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update1Null"
            android:minWidth="100dip" />
    </TableRow>
	<TableRow android:layout_width="match_parent"
        android:gravity="center" >
	    <TextView
            android:id="@+id/d_update_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update2"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/input_update2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update2Null"
            android:minWidth="100dip" />
	</TableRow>
	<TableRow android:layout_width="match_parent"
        android:gravity="center" >
	    <TextView
            android:id="@+id/d_update_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update3"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/input_update3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update3Null"
            android:minWidth="100dip" />
	</TableRow>
</TableLayout>