<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/commit_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#80808080"
    android:orientation="horizontal" >

    <TableRow android:layout_width="match_parent"
        android:gravity="center" >
        <TextView
            android:id="@+id/d_commite_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commiteName"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/input_commit_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commiteNameNull"
            android:minWidth="100dip" />
    </TableRow>
	<TableRow android:layout_width="match_parent"
        android:gravity="center" >
	    <TextView
            android:id="@+id/d_commite_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commiteTel"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/input_commit_tel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commiteTelNull"
            android:inputType="number"
            android:minWidth="100dip" />
	</TableRow>
</TableLayout>