<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80808080" >
    
	<TableRow android:layout_height="match_parent"
        android:gravity="center" >
		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"/>
	</TableRow>
	
    <TableRow
        android:layout_height="match_parent"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/downStr" />

    </TableRow>
	<TableRow android:layout_height="match_parent"
        android:gravity="center" >
		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"/>
	</TableRow>
	
    <TableRow android:gravity="center" >

        <Button
            android:id="@+id/buttonClear"
            android:layout_weight="1"
            android:text="@string/clearStr" />

    </TableRow>
    
	<TableRow android:layout_height="match_parent"
        android:gravity="center" >
		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"/>
	</TableRow>
	
    <TableRow android:gravity="center" >

        <Button
            android:id="@+id/buttonCommit"
            android:layout_weight="1"
            android:text="@string/commitStr" />

    </TableRow>
    
	<TableRow android:layout_height="match_parent"
        android:gravity="center" >
		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"/>
	</TableRow>
	
    <TableRow android:gravity="center" >

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_weight="1"
            android:text="@string/updateStr" />

    </TableRow>
    
	<TableRow android:layout_height="match_parent"
        android:gravity="center" >
		<TextView
		    android:id="@+id/textView5"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"/>
	</TableRow>
	
    <TableRow android:gravity="center" >
        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/exitStr" />
    </TableRow>
    
</TableLayout>